frontend/src/stylesheets/styles.css
#headerDescription {
    font-size: 22px;
    color: #4e524e;
    margin-left: 40px;
    margin-right: 50px;
    margin-bottom: 35px;
    display: inline;
}

.lessPM {
    padding-top: 1px;
    padding-bottom: 1px;
}

.contact-info {
    font-size: large;
    background-color: #efefef;
}

.contact-content {
    margin: 25px;
    padding: 25px;
}

.content {
    background-color: #efefef;
    width: auto;
    height: 40em;
}

#bodyDiv {
    padding-top: 1px;
    height: 75vh;
    margin-top: 20px;
    /* margin-bottom: 20px; */
    text-align: center;
    background-color: #efefef;
}

#paragraphDiv {
    margin-left: 20%;
    margin-right: 20%;
    font-size: 20px;
}

h1 {
    font-size: 50px;
    color: #4e524e;
    margin-left: 35px;
    margin-right: 35px;
    margin-top: 15px;
    margin-bottom: 5px;
}

h2 {
    font-size: 50px;
    margin-top: 50px;
}

h3 {
    font-size: 25px;
    margin-top: 10px;
    margin-bottom: 10px;
    padding: 25px;
}

.indexP {
    margin: 15px;
    line-height: 30px;
}

ul, li, .navInline {
    display: inline;
}

/* ul {
    margin-left: 75px;
} */

a:link, a:visited {
    color: #4e524e;
    text-decoration-line: none;
}

a:hover {
    color: #7181da;
}

li {
    margin-left: 25px;
    margin-right: 25px;
}

i {
    font-style: italic;
}

b {
    font-weight: bold;
}

.svg-container {
    width: 5em;
    height: 5em;
    display: inline;
}

#footerParagraph {
    margin-top: 0px;
    padding-top: 10px;
}

footer {
    background-color:#ff3b3f;
    padding-bottom: 5px;
}

